(lang dune 3.10)

(name ocaml_dump)

(generate_opam_files true)

(source
 (github mnpqraven/ocaml_dump))

(authors "Othi")

(maintainers "Othi")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_dump)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
